# Demon-Repo

./: .gitattributes  .gitignore  .reviewit.rules  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape
reviewit/: __init__.py  cli.py  config.py  diff.py  formatter.py  hooks.py  prompt.py
reviewit/providers/: __init__.py  anthropic.py  ollama.py  openai.py
tests/: test_cli.py  test_config.py  test_diff.py  test_hooks.py  test_prompt.py  test_providers.py
